# Project1Lexer

./: AddAutomaton.h  Automaton.h  BlockCommentAutomaton.h  CMakeLists.txt  ColonAutomaton.h  ColonDashAutomaton.h  CommaAutomaton.h  CommentAutomaton.h  Database.h  DatalogProgram.h  FactsAutomaton.h  Graph.h  Header.h  IDAutomaton.h  Interpreter .h  Left_ParenAutomaton.h  Lexer.h  MultiplyAutomaton.h  Parameter.h  Parser.h  PeriodAutomaton.h  Predicate.h  Q_MarkAutomaton.h  QueriesAutomaton.h  README.md  Relation.h  Right_ParenAutomaton.h  Rule.h  RulesAutomaton.h  SchemesAutomaton.h  StringAutomaton.h  Token.h  Tuple.h  UndefinedCharAutomaton.h  lab1  lab2  main.cpp
